--- a/src/EcoLogic/pages/recuperacaosenha/style.css
+++ b/src/EcoLogic/pages/recuperacaosenha/style.css
@@ -5,34 +5,28 @@
     box-sizing: border-box;
 }
 
-html,
-body {
-    height: 100%;
-}
-
 body {
     background: #000;
     color: #fff;
     display: flex;
     flex-direction: column;
-
+    height: 100vh;
+    font-size: 1rem; 
 }
-
 
 header {
     background-color: #fff;
     width: 100%;
-    /*1442px; */
     height: 175px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
-
 }
 
 .logo img {
     width: 235px;
-    height: 100px; /* Mantém a proporção */
+    height: 100px;
+    margin-left: 36px;
+    margin-top: 26px;
 }
-
 
 .navbar {
     display: flex;
@@ -43,12 +37,14 @@ header {
 
 .botaonavbar {
     margin-left: auto;
+    margin-right: 26px;
+    margin-top: 6px;
 }
 
 .botaonavbar button {
     display: flex;
-    width: 321px;
-    height: 72px;
+    width: 223px;
+    height: 50px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -61,23 +57,24 @@ header {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
+    top: 51px;
+    left: 1117px;
+    gap: 0px;
+    opacity: 0px;
 }
 
 .botaonavbar button:hover {
     background-color: #8DB5AD;
 }
 
-
 main {
-    flex: 80%;
+    flex: 0%;
 }
-
 
 footer {
     width: 100%;
     height: 175px;
     background-color: #FAAA30;
-    /* background: linear-gradient (#FAAA30 #fff #FAAA30); */
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25) inset;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
