--- a/src/EcoLogic/pages/relatorios/style.css
+++ b/src/EcoLogic/pages/relatorios/style.css
@@ -5,33 +5,28 @@
     box-sizing: border-box;
 }
 
-html,
-body {
-    height: 100%;
-}
-
 body {
     background: #000;
     color: #fff;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    font-size: 1rem; 
 }
-
 
 header {
     background-color: #fff;
     width: 100%;
     height: 175px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
-
 }
 
 .logo img {
     width: 235px;
     height: 100px;
-    /* Mantém a proporção */
+    margin-left: 36px;
+    margin-top: 26px;
 }
-
 
 .navbar {
     display: flex;
@@ -42,12 +37,15 @@ header {
 
 .botaonavbar {
     margin-left: auto;
+    margin-right: 26px;
+    margin-top: 6px;
+
 }
 
 .botaonavbar button {
     display: flex;
-    width: 321px;
-    height: 72px;
+    width: 223px;
+    height: 50px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -60,67 +58,63 @@ header {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
+    top: 51px;
+    left: 1117px;
+    gap: 0px;
+    opacity: 0px;
 }
 
 .botaonavbar button:hover {
     background-color: #8DB5AD;
 }
 
-
 aside {
     background: #1D6B59;
     width: 375px;
-    height: 2426px;
+    height: 1028px;
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25) inset;
     top: 175px;
     gap: 0px;
     opacity: 0px;
-
-
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* Centraliza os elementos horizontalmente */
     padding-top: 20px;
-    /* Ajuste a margem superior conforme necessário */
 }
-
 
 .search-bar {
     width: 339px;
-    height: 59px;
     border-radius: 6px;
     background: #24826F;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 10px;
     margin-bottom: 13px;
+    padding: 12px;
 }
 
 .search-bar input {
-    width: 100%;
-    /* O input ocupa todo o espaço disponível */
+    width: 100%; 
+    height: 100%; 
     border: none;
     background: none;
-    color: white;
+    color: #fff;
     font-size: 18px;
     outline: none;
-    /* Remove o contorno */
+    padding-left: 10px;
 }
 
 .search-bar img {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
 }
 
-
 .botaousinas button {
+    width: 356px;
+    height: 94px;
     display: flex;
-    width: 321px;
-    height: 72px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -133,7 +127,10 @@ aside {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 7px 0;
+    margin: 4px 0;
+    stroke-width: 1px;
+    stroke: #24826F;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .botaousinas button:hover {
@@ -141,9 +138,9 @@ aside {
 }
 
 .botaofontedeenergia button {
+    width: 356px;
+    height: 94px;
     display: flex;
-    width: 321px;
-    height: 72px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -156,7 +153,10 @@ aside {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 7px 0;
+    margin: 4px 0;
+    stroke-width: 1px;
+    stroke: #24826F;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .botaofontedeenergia button:hover {
@@ -164,9 +164,9 @@ aside {
 }
 
 .botaoproducao button {
+    width: 356px;
+    height: 94px;
     display: flex;
-    width: 321px;
-    height: 72px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -179,7 +179,10 @@ aside {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 7px 0;
+    margin: 4px 0;
+    stroke-width: 1px;
+    stroke: #24826F;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .botaoproducao button:hover {
@@ -187,9 +190,9 @@ aside {
 }
 
 .botaorelatorios button {
+    width: 356px;
+    height: 94px;
     display: flex;
-    width: 321px;
-    height: 72px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -202,7 +205,10 @@ aside {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 7px 0;
+    margin: 4px 0;
+    stroke-width: 1px;
+    stroke: #24826F;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .botaorelatorios button:hover {
@@ -210,9 +216,9 @@ aside {
 }
 
 .botaoadm button {
+    width: 356px;
+    height: 94px;
     display: flex;
-    width: 321px;
-    height: 72px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -225,22 +231,23 @@ aside {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 7px 0;
+    margin: 4px 0;
+    stroke-width: 1px;
+    stroke: #24826F;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .botaoadm button:hover {
     background-color: #8DB5AD;
 }
 
-.botaonsair button {
+.botaosair button {
     display: flex;
     width: 163px;
     height: 60px;
-    top: 2494px;
-    left: 106px;
     gap: 0px;
     border-radius: 3px 0px 0px 0px;
-    opacity: 0px;
+    opacity: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -255,43 +262,17 @@ aside {
     transition: background-color 0.3s;
     backdrop-filter: blur(4px);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
-    box-shadow: 0px 4px 4px 0px #00000040;
-
-    margin-top: 500px;
-    margin-bottom: 80px;
-
+    margin-top: 16rem;
 }
-
 
 .botaonsair button:hover {
     background-color: #8DB5AD;
 }
 
-/* 
-.search-bar {
-    width: 339px;
-    height: 59px;
-    top: 192px;
-    left: 18px;
-    gap: 0px;
-    border-radius: 6px 0px 0px 0px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
-    background: #24826F;
-    box-shadow: 0px 4px 4px 0px #00000040;
-    fill: #24826F;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    
-} */
-
-
-
-
 footer {
     width: 100%;
     height: 175px;
     background-color: #FAAA30;
-    /* background: linear-gradient (#FAAA30 #fff #FAAA30); */
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25) inset;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
