--- a/projeto-concreta/src/app/app.component.html
+++ b/projeto-concreta/src/app/app.component.html
@@ -1,5 +1,9 @@
+<!--Tags para teste de visualização apenas-->
 <app-navbar></app-navbar>
 
 <br>
 
 <app-footer></app-footer>
+
+<!--Única Tag no AppComonent-->
+<router-outlet></router-outlet>
