--- a/projeto-concreta/src/app/navbar/navbar.component.scss
+++ b/projeto-concreta/src/app/navbar/navbar.component.scss
@@ -2,10 +2,15 @@
 
 .navbar {
     background-color: #023059;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 10px 20px;
+
+    .navbar-container {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
     .navbar-logo {
         a {
