--- a/projeto-concreta/src/app/pages/home/home.component.html
+++ b/projeto-concreta/src/app/pages/home/home.component.html
@@ -1,2 +1,11 @@
 <app-navbar></app-navbar>
-<p>home works!</p>
+
+<div class="banner">
+    <div class="banner-content">
+        <h1>CONCRETA <br>
+        Organização e Precisão<br>
+        em cada etapa</h1>
+    </div>
+</div>
+
+<app-footer></app-footer>
