tela obra andamento e finalizada pronta

--- a/projeto-concreta/src/app/pages/obra-andamento/obra-andamento.component.html
+++ b/projeto-concreta/src/app/pages/obra-andamento/obra-andamento.component.html
@@ -1,6 +1,6 @@
 <app-navbar/>
 
-<div class="container" style="margin-top: 100px;">
+<div class="container" style="margin-bottom: 100px; margin-top: 100px">
     <h2 style=" text-align: center;">OBRAS EM ANDAMENTO</h2>
     <div class="content">
       
@@ -42,12 +42,19 @@
       </table>
 
     </div>
-    <div class="buttons" style="margin-top: 50px;">
-        <button class="btn back">🔙 Voltar para o menu</button>
-        <button class="btn load-more">Carregar mais obras 🔜</button>
+    <div class="buttons" style="margin-top: 10px;">
+
+        <button class="btn back">
+          <img src="../../assets/icone-voltar.svg" alt="Ícone de voltar" />
+          Voltar para o menu
+        </button>
+
+        <button class="btn load-more">
+          <img src="../../assets/icone-andamento.svg" alt="Ícone de andamento"/>
+          Carregar mais obras
+        </button>
       </div>
   </div>
   
-
-<!-- <app-footer/> -->
+ <app-footer/>
 
