--- a/projeto-concreta/src/app/pages/obra-finalizada/obra-finalizada.component.html
+++ b/projeto-concreta/src/app/pages/obra-finalizada/obra-finalizada.component.html
@@ -1,3 +1,59 @@
 <app-navbar/>
-<br>
+
+<div class="container" style="margin-bottom: 100px; margin-top: 100px">
+    <h2 style=" text-align: center;">OBRAS FINALIZADAS</h2>
+    <div class="content">
+      
+      <table>
+        <thead>
+          <tr>
+            <th>Nome da obra</th>
+            <th>Construtora</th>
+            <th>Localização</th>
+            <th>Finalizada em:</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+    <div class="buttons" style="margin-top: 10px;">
+
+        <button class="btn back">
+          <img src="../../assets/icone-voltar.svg" alt="Ícone de voltar" />
+          Voltar para o menu
+        </button>
+
+        <button class="btn load-more">
+          <img src="../../assets/icone-andamento.svg" alt="Ícone de andamento"/>
+          Carregar mais obras
+        </button>
+      </div>
+  </div>
+  
 <app-footer/>
