--- a/projeto-concreta/src/app/pages/obra-andamento/obra-andamento.component.scss
+++ b/projeto-concreta/src/app/pages/obra-andamento/obra-andamento.component.scss
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 * {
     margin: 30;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Oswald', sans-serif;
   }
   
   body {
@@ -14,7 +15,7 @@
   
   .container {
     background-color: #023059;
-    padding-top: 25px;
+    padding-top: 20px;
     padding-left: 80px;
     padding-bottom: 50px;
     padding-right: 80px;
@@ -45,9 +46,10 @@
   }
   
   th, td {
-    border: 1px solid #023059;
+    border: 1px solid #D1D4F5;
     padding: 22px;
     text-align: center;
+    font-size: 20px;
 
     
   }
