Sobre o Projeto - Home.

--- a/projeto-concreta/src/app/pages/home/home.component.html
+++ b/projeto-concreta/src/app/pages/home/home.component.html
@@ -1,11 +1,26 @@
 <app-navbar></app-navbar>
 
-<div class="banner">
+<section class="banner">
     <div class="banner-content">
         <h1>CONCRETA <br>
         Organização e Precisão<br>
         em cada etapa</h1>
     </div>
-</div>
+</section>
+
+<section class="sobre-container">
+    <div class="sobre-texto">
+        <h2>NOSSO PROJETO</h2>
+        <p>
+            O projeto "Concreta", desenvolvido no curso de Análise e Desenvolvimento de Sistemas da PUC Minas, 2º semestre de 2024, é uma 
+            <b>plataforma interativa de gestão de obras</b>. Seu objetivo é oferecer aos gestores, construtoras e clientes uma visão clara das etapas de cada obra, com relatórios detalhados e alertas sobre atrasos e alterações nos cronogramas. 
+            <b>Integrantes: Danillo Souza de Faria, Jéssica Maria Silva, Luiz Fernando Ribeiro Rocha, Paloma Caroline de Sá Bassani, Rafael de Castro Leles e Thiago Soares de Souza</b>.
+        </p>
+    </div>
+    <div class="sobre-imagem">
+        <div class="imagem-fundo"></div>
+        <img src="../../../assets/sobre-home.svg" alt="Equipe" class="imagem-equipe">
+    </div>
+</section>
 
 <app-footer></app-footer>
