--- a/projeto-concreta/src/app/pages/home/home.component.html
+++ b/projeto-concreta/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 
+<!--BANNER-->
 <section class="banner">
     <div class="banner-content">
         <h1>CONCRETA <br>
@@ -8,6 +9,7 @@
     </div>
 </section>
 
+<!--SOBRE-->
 <section class="sobre-container">
     <div class="sobre-texto">
         <h2>NOSSO PROJETO</h2>
@@ -20,6 +22,37 @@
     <div class="sobre-imagem">
         <div class="imagem-fundo"></div>
         <img src="../../../assets/sobre-home.svg" alt="Equipe" class="imagem-equipe">
+    </div>
+</section>
+
+<!--BENEFICIOS-->
+<section class="beneficios">
+    <h2 class="beneficios-title">BENEFÍCIOS</h2>
+    <div class="beneficios-container">
+        <div class="beneficio">
+            <h3 class="beneficio-title">
+            <span class="numero">1.</span> Visibilidade total do projeto
+            </h3>
+            <p class="beneficio-description">
+            acesso a todas as fases da obra
+            </p>
+        </div>
+        <div class="beneficio">
+            <h3 class="beneficio-title">
+            <span class="numero">2.</span> Melhora na comunicação
+            </h3>
+            <p class="beneficio-description">
+            facilita o fluxo de informações
+            </p>
+        </div>
+        <div class="beneficio">
+            <h3 class="beneficio-title">
+            <span class="numero">3.</span> Economia de tempo
+            </h3>
+            <p class="beneficio-description">
+            ajuda a prevenir problemas antes que ocorram
+            </p>
+        </div>
     </div>
 </section>
 
