--- a/projeto-concreta/src/app/pages/home/home.component.html
+++ b/projeto-concreta/src/app/pages/home/home.component.html
@@ -56,4 +56,23 @@
     </div>
 </section>
 
+<!--FERRAMENTAS-->
+<section class="ferramentas-container">
+    <h2 class="ferramentas-titulo">FERRAMENTAS</h2>
+    <div class="ferramentas-grid">
+        <div class="ferramenta-item">
+            <img src="../../../assets/icone-gestao-home.svg" alt="Calendário" class="ferramenta-icon">
+            <span class="ferramenta-texto">Gestão de <br> Cronograma</span>
+        </div>
+        <div class="ferramenta-item">
+            <img src="../../../assets/icone-relatorio-home.svg" alt="Relatórios" class="ferramenta-icon">
+            <span class="ferramenta-texto">Relatórios <br> Automatizados</span>
+        </div>
+        <div class="ferramenta-item">
+            <img src="../../../assets/icone-alerta-home.svg" alt="Alertas" class="ferramenta-icon">
+            <span class="ferramenta-texto">Alertas e <br> Notificações</span>
+        </div>
+    </div>
+</section>
+
 <app-footer></app-footer>
