--- a/projeto-concreta/src/app/pages/home/home.component.scss
+++ b/projeto-concreta/src/app/pages/home/home.component.scss
@@ -94,6 +94,7 @@ h1 {
     margin-top: 40PX;
     padding: 40px 20px;
     text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
     .beneficios-title {
         font-family: 'Oswald', sans-serif;
@@ -139,6 +140,52 @@ h1 {
             font-size: 16px;
         }
     }
+}
+
+/*FERRAMENTAS*/
+.ferramentas-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px;
+    text-align: center;
+}
+
+.ferramentas-titulo {
+    font-family: 'Oswald', sans-serif;
+    font-size: 32px;
+    color: #023059;
+    margin-bottom: 40px;
+}
+
+.ferramentas-grid {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 180px;
+    margin-bottom: 40px;
+}
+
+.ferramenta-item {
+    display: flex;
+    align-items: center;
+    border: 2px solid #023059;
+    border-radius: 10px;
+    padding: 20px;
+    flex: 1;
+    width: 100px;
+}
+
+.ferramenta-icon {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.ferramenta-texto {
+    font-family: 'Oswald', sans-serif;
+    font-size: 24px;
+    color: #023059;
+    text-align: left;
 }
 
 /* Responsividade para telas*/
@@ -195,12 +242,42 @@ h1 {
 
     /*BENEFICIOS*/
     .beneficios-title {
+        font-size: 24px !important; 
         text-align: left;
-        font-size: 24px;
     }
+
+    .beneficio-title {
+        font-size: 16px !important;
+    }
+
 
     .beneficios-container {
         gap: 20px;
+    }
+
+    /*FERRAMENTAS*/
+    .ferramentas-titulo {
+        font-size: 24px;
+    }
+
+    .ferramentas-grid {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    .ferramenta-item {
+        width: 80%;
+        margin-bottom: 15px;
+    }
+
+    .ferramenta-icon {
+        width: 40px;
+        height: 40px;
+    }
+
+    .ferramenta-texto {
+        font-size: 16px;
     }
 }
 
