--- a/projeto-concreta/src/app/pages/home/home.component.html
+++ b/projeto-concreta/src/app/pages/home/home.component.html
@@ -75,4 +75,22 @@
     </div>
 </section>
 
+<!--CONTATO-->
+<section class="contato-container">
+    <div class="contato-content">
+        <div class="formulario">
+            <h2>FALE CONOSCO</h2>
+            <form>
+            <input type="text" placeholder="Nome" class="input-form" />
+            <input type="email" placeholder="E-mail" class="input-form" />
+            <textarea placeholder="Mensagem" class="input-form"></textarea>
+            <button type="submit" class="btn-enviar">Enviar</button>
+            </form>
+        </div>
+        <div class="imagem-container">
+            <img src="../../../assets/atendimento-home.svg" alt="Atendimento" />
+        </div>
+    </div>
+</section>
+
 <app-footer></app-footer>
