instalacao do primeng/primeflex e criacao do menu-cliente e menu-gestor

--- a/projeto-concreta/src/app/pages/menu-gestor-cliente/menu-gestor-cliente.component.html
+++ b/projeto-concreta/src/app/pages/menu-gestor-cliente/menu-gestor-cliente.component.html
@@ -1,4 +1,11 @@
-<p>menu-gestor-cliente works!</p>
-dsad
-sadasdsa
-<div class="div"></div>
+<app-navbar />
+
+@if (menu === 'cliente') {
+        <app-menu-cliente />
+}
+
+@if (menu === 'gestor') {
+    <app-menu-gestor />
+}
+
+<app-footer />
