Finalizacao das telas de menu cliente e gestor

--- a/projeto-concreta/src/app/pages/menu-gestor-cliente/menu-gestor-cliente.component.html
+++ b/projeto-concreta/src/app/pages/menu-gestor-cliente/menu-gestor-cliente.component.html
@@ -1,11 +1,15 @@
-<app-navbar />
+<div class="min-h-screen flex flex-column">
+  <app-navbar />
 
-@if (menu === 'cliente') {
-        <app-menu-cliente />
-}
-
-@if (menu === 'gestor') {
+  <div class="flex-grow-1 flex justify-content-center">
+    @if (menu === 'cliente') {
+    <app-menu-cliente />
+    } @if (menu === 'gestor') {
     <app-menu-gestor />
-}
+    }
+  </div>
 
-<app-footer />
+  <p-button (onClick)="menu = menu === 'gestor' ? 'cliente' : 'gestor'"></p-button>
+
+  <app-footer />
+</div>
