--- a/projeto-concreta/src/styles.scss
+++ b/projeto-concreta/src/styles.scss
@@ -4,8 +4,12 @@
 @import "primeflex/primeflex.css";
 @import "primeicons/primeicons.css";
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+
 body, html {
     margin: 0;
     padding: 0;
     background-color: #F9F8F4;
+    font-family: 'Oswald', sans-serif;
 }
