Ajustes na navbar

--- a/projeto-concreta/src/styles.scss
+++ b/projeto-concreta/src/styles.scss
@@ -12,4 +12,5 @@ body, html {
     padding: 0;
     background-color: #F9F8F4;
     font-family: 'Oswald', sans-serif;
+    scroll-behavior: smooth;
 }
