--- a/projeto-concreta/src/app/navbar/navbar.component.html
+++ b/projeto-concreta/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="navbar-container">
         <div class="navbar-logo">
-            <a routerLink="/home">
+            <a routerLink="/home" >
                 <img src="../../assets/logo-concreta.svg" alt="Logo da Empresa" />
             </a>
         </div>
@@ -9,13 +9,13 @@
         <div class="navbar-menu" [ngClass]="{ 'open': isMenuOpen }">
             <ul class="navbar-links">
                 <li class="navbar-link">
-                    <a routerLink="/sobre" routerLinkActive="active">Sobre</a>
+                    <a (click)="scrollToSection('sobre')" class="cursor-pointer" routerLink="/sobre" routerLinkActive="active">Sobre</a>
                 </li>
                 <li class="navbar-link">
-                    <a routerLink="/ferramentas" routerLinkActive="active">Ferramentas</a>
+                    <a (click)="scrollToSection('ferramentas')" class="cursor-pointer" routerLink="/ferramentas" routerLinkActive="active">Ferramentas</a>
                 </li>
                 <li class="navbar-link">
-                    <a routerLink="/contato" routerLinkActive="active">Contato</a>
+                    <a (click)="scrollToSection('contato')" class="cursor-pointer" routerLink="/contato" routerLinkActive="active">Contato</a>
                 </li>
             </ul>
             <div class="navbar-user">
