--- a/projeto-concreta/src/app/pages/home/home.component.html
+++ b/projeto-concreta/src/app/pages/home/home.component.html
@@ -10,13 +10,13 @@
 </section>
 
 <!--SOBRE-->
-<section class="sobre-container">
+<section id="sobre" class="sobre-container">
     <div class="sobre-texto">
         <h2>NOSSO PROJETO</h2>
         <p>
             O projeto "Concreta", desenvolvido no curso de Análise e Desenvolvimento de Sistemas da PUC Minas, 2º semestre de 2024, é uma 
             <b>plataforma interativa de gestão de obras</b>. Seu objetivo é oferecer aos gestores, construtoras e clientes uma visão clara das etapas de cada obra, com relatórios detalhados e alertas sobre atrasos e alterações nos cronogramas. 
-            <b>Integrantes: Danillo Souza de Faria, Jéssica Maria Silva, Luiz Fernando Ribeiro Rocha, Paloma Caroline de Sá Bassani, Rafael de Castro Leles e Thiago Soares de Souza</b>.
+            <b>Integrantes: Danillo Souza de Faria, Jéssica Maria Silva, Luiz Fernando Ribeiro Rocha, Paloma Caroline de Sá Bassani e Rafael de Castro Leles</b>.
         </p>
     </div>
     <div class="sobre-imagem">
@@ -57,7 +57,7 @@
 </section>
 
 <!--FERRAMENTAS-->
-<section class="ferramentas-container">
+<section id="ferramentas" class="ferramentas-container">
     <h2 class="ferramentas-titulo">FERRAMENTAS</h2>
     <div class="ferramentas-grid">
         <div class="ferramenta-item">
@@ -76,7 +76,7 @@
 </section>
 
 <!--CONTATO-->
-<section class="contato-container">
+<section id="contato" class="contato-container">
     <div class="contato-content">
         <div class="formulario">
             <h2>FALE CONOSCO</h2>
