BD Formulario Contato

--- a/projeto-concreta/WebSites/src/app/pages/home/home.component.html
+++ b/projeto-concreta/WebSites/src/app/pages/home/home.component.html
@@ -80,12 +80,13 @@
     <div class="contato-content">
         <div class="formulario">
             <h2>FALE CONOSCO</h2>
-            <form>
+            <!--<form>
             <input type="text" placeholder="Nome" class="input-form" />
             <input type="email" placeholder="E-mail" class="input-form" />
             <textarea placeholder="Mensagem" class="input-form"></textarea>
             <button type="submit" class="btn-enviar">Enviar</button>
-            </form>
+            </form>-->
+            <app-contato></app-contato>
         </div>
         <div class="imagem-container">
             <img src="../../../assets/atendimento-home.svg" alt="Atendimento" />
